<?xml version="1.0"?>
<package >
  <name>parachute</name>
  <version>1.0.0</version>
  <description>The parachute package</description>
  <maintainer email="srikarsiddharth@gmail.com">root</maintainer>
  <license>MIT</license>
   <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>gazebo_ros</buildtool_depend>
  <build_depend>eigen</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>libgstreamer-plugins-base1.0-dev</build_depend>
  <build_depend>mavlink</build_depend>
  <build_depend>mavros</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>protobuf-dev</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>python-rospkg</build_depend>
  <build_depend>python-jinja2</build_depend>
  <run_depend>eigen</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>gstreamer1.0-plugins-bad</run_depend>
  <run_depend>gstreamer1.0-plugins-good</run_depend>
  <run_depend>gstreamer1.0-plugins-ugly</run_depend>
  <run_depend>mavlink</run_depend>
  <run_depend>mavros</run_depend>
  <run_depend>mavros_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>
  </export>
</package>
